# drcheck

./: README.md  pyproject.toml
.github/: FUNDING.yml
drcheck/: analysis.py  audio.py  cli.py  formatters.py
tests/: test_audio.py  test_cli.py
