[project]
name = "drcheck"
version = "1.0.0"
description = "Dynamic Range Analyzer - Fight the Loudness War"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "mutagen>=1.47.0",
    "numpy>=2.0.0",
    "soundfile>=0.13.0",
]

[project.optional-dependencies]
# For MP3/M4A support (requires ffmpeg installed separately)
lossy = [
    "pydub>=0.25.1",
]

# For development
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
drcheck = "drcheck.cli:main"

[project.urls]
Homepage = "https://github.com/nixternal/drcheck"
Repository = "https://github.com/nixternal/drcheck"
Issues = "https://github.com/nixternal/drcheck/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
